--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7",
+    "typeface-source-sans-pro": "^1.1.13",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
