--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.10",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "swiper": "^6.7.5",
